# northstar-agent

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/chunks/: chunks.jsonl
data/docx/: northstar.docx
data/markdown/: northstar.md
notebooks/: chunking.ipynb
src/data_processing/: docx_to_markdown.py  pdf_to_docx.py  pipeline.py
src/ingest/: pipeline.py  utils.py
src/prompts/: system_prompt.py
src/rag/: pipeline.py
src/router/: response.py
