[project]
name = "pfa"
version = "0.1.0"
description = "A small RAG chatbot for PFA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "markitdown[docx]>=0.1.4",
    "pdf2docx>=0.5.8",
    "uvicorn>=0.40.0",
]
